[gd_scene load_steps=7 format=3 uid="uid://dyjw84xyjlj2o"]

[ext_resource type="Script" path="res://Scripts/Gameplay/intro.gd" id="1_7bwpo"]
[ext_resource type="Texture2D" uid="uid://c5an0q8psjom8" path="res://Map/godot-logo.png" id="1_lorxw"]
[ext_resource type="Theme" uid="uid://dv3w4syw7lh2d" path="res://new_theme.tres" id="2_lipp8"]
[ext_resource type="Shader" path="res://Scripts/Shaders/transition_points.gdshader" id="4_mqtxc"]
[ext_resource type="Script" path="res://Scripts/Gameplay/tween_float.gd" id="5_t8lme"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pw2nw"]
resource_local_to_scene = true
shader = ExtResource("4_mqtxc")
shader_parameter/in_color = Color(1, 0.847059, 0.380392, 1)
shader_parameter/out_color = Color(1, 0.847059, 0.380392, 1)
shader_parameter/in_out = 0.0
shader_parameter/position = 1.0
shader_parameter/size = Vector2(36, 24)

[node name="Intro" type="Node2D"]
script = ExtResource("1_7bwpo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.701961, 0.976471, 0.996078, 1)

[node name="LogoGodot" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -200.0
offset_right = 325.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lorxw")

[node name="JamText" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -474.0
offset_right = 20.0
offset_bottom = -434.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameJam" type="Label" parent="CanvasLayer/JamText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.5
offset_top = -48.5
offset_right = 348.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 40
text = "CougarCup Jam"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Theme" type="Label" parent="CanvasLayer/JamText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 28.0
offset_right = 175.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 20
text = "#2024  Tropical Summer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AutorText" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -474.0
offset_right = 20.0
offset_bottom = -434.0
grow_horizontal = 2
grow_vertical = 2

[node name="Autor" type="Label" parent="CanvasLayer/AutorText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.5
offset_top = -48.5
offset_right = 348.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 40
text = "Isaacdbs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameBy" type="Label" parent="CanvasLayer/AutorText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -52.0
offset_right = 175.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 15
text = "A game by"
vertical_alignment = 1

[node name="RelaxText" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -474.0
offset_right = 20.0
offset_bottom = -434.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/RelaxText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.0
offset_top = -173.0
offset_right = 422.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 60
text = "Cozy Island"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chill" type="Label" parent="CanvasLayer/RelaxText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.5
offset_top = -48.5
offset_right = 348.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 30
text = "Enjoy the game, no pressure,
 no timer, just chill"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fases" type="Label" parent="CanvasLayer/RelaxText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 47.0
offset_right = 144.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lipp8")
theme_override_font_sizes/font_size = 15
text = "20 unique levels"
vertical_alignment = 1

[node name="Skip" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -41.0
offset_right = -22.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_lipp8")
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 10
text = "Press space to skip"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_t8lme")
intensity = 2.0

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FadeShader" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_pw2nw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
